--- a/book/_config.yml
+++ b/book/_config.yml
@@ -15,6 +15,14 @@ latex:
   latex_documents:
     targetname: book.tex
 
+parse:
+  myst_enable_extensions:
+    - amsmath
+    - colon_fence
+    - dollarmath
+    - linkify
+    - substitution
+
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
   - references.bib
